--- a/src_Backend/AfricanNationsLeague.Api/appsettings.Development.json
+++ b/src_Backend/AfricanNationsLeague.Api/appsettings.Development.json
@@ -10,11 +10,11 @@
     "ConnectionString": "mongodb+srv://kgalela_db_user:190794%40Kgalela@cluster0.givxjtb.mongodb.net/",
     "Database": "AfricanNationsLeagueDb"
   },
+  "ApiFootball": {
+    "BaseUrl": "https://v3.football.api-sports.io/",
+    "ApiKey": "e8da43cf4ff986b121f9dd8806d458c7"
+  },
   "AllowedHosts": "*"
 
 
-  //"Mongo": {
-  //  "ConnectionString": "mongodb+srv://kgalela_db_user:190794Khanyisa@cluster0.givxjtb.mongodb.net/AfricanNationsLeagueDataBase",
-  //  "Database": "AfricanNationsLeagueDataBase"
-  //}
 }
