--- a/src_Backend/AfricanNationsLeague.Api/appsettings.json
+++ b/src_Backend/AfricanNationsLeague.Api/appsettings.json
@@ -6,5 +6,12 @@
     }
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "GmailOptions": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Email": "khanyisagalela1@gmail.com",
+    "Password": "ijydahngfmlzzyif"
+  }
 }
