--- a/srcUI_Frontend/AfricanNationsLeague_Web/AfricanNationsLeague_Web.csproj
+++ b/srcUI_Frontend/AfricanNationsLeague_Web/AfricanNationsLeague_Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.10" />
     <PackageReference Include="MudBlazor" Version="8.13.0" />
     <PackageReference Include="MudBlazor.FontIcons.MaterialIcons" Version="1.3.0" />
     <PackageReference Include="MudBlazor.ThemeManager" Version="3.0.0" />
