--- a/src_Backend/AfricanNationsLeague.Application/AfricanNationsLeague.Application.csproj
+++ b/src_Backend/AfricanNationsLeague.Application/AfricanNationsLeague.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.10" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
   </ItemGroup>
 
