--- a/srcUI_Frontend/AfricanNationsLeague_Web/appsettings.json
+++ b/srcUI_Frontend/AfricanNationsLeague_Web/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultConnection": {
+    "BaseUrl": "https://africannationsleagueapi-cmb2gudtfwh8gydv.southafricanorth-01.azurewebsites.net"
+
+  }
 }
