--- a/src_Backend/AfricanNationsLeague.Api/appsettings.json
+++ b/src_Backend/AfricanNationsLeague.Api/appsettings.json
@@ -13,5 +13,13 @@
     "Port": 587,
     "Email": "khanyisagalela1@gmail.com",
     "Password": "ijydahngfmlzzyif"
+  },
+  "Mongo": {
+    "ConnectionString": "mongodb+srv://kgalela_db_user:190794%40Kgalela@cluster0.givxjtb.mongodb.net/",
+    "Database": "AfricanNationsLeagueDb"
+  },
+  "ApiFootball": {
+    "BaseUrl": "https://v3.football.api-sports.io/",
+    "ApiKey": "e8da43cf4ff986b121f9dd8806d458c7"
   }
 }
