--- a/.github/workflows/master_africannationsleague.yml
+++ b/.github/workflows/master_africannationsleague.yml
@@ -27,7 +27,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ./srcUI_Frontend/AfricanNationsLeague_Web/AfricanNationsLeague_Web.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish -c Release --property:./srcUI_Frontend/AfricanNationsLeague_Web/AfricanNationsLeague_Web.csproj'${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
