--- a/srcUI_Frontend/AfricanNationsLeague_Web/appsettings.json
+++ b/srcUI_Frontend/AfricanNationsLeague_Web/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "DefaultConnection": {
-    "BaseUrl": "https://africannationsleagueapi-cmb2gudtfwh8gydv.southafricanorth-01.azurewebsites.net"
+    "BaseUrl": "https://localhost:7234"
 
   }
 }
