--- a/srcUI_Frontend/AfricanNationsLeague_Web/AfricanNationsLeague_Web.csproj
+++ b/srcUI_Frontend/AfricanNationsLeague_Web/AfricanNationsLeague_Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="10.0.0-rc.2.25502.107" />
     <PackageReference Include="MudBlazor" Version="8.13.0" />
     <PackageReference Include="MudBlazor.FontIcons.MaterialIcons" Version="1.3.0" />
     <PackageReference Include="MudBlazor.ThemeManager" Version="3.0.0" />
