--- a/srcUI_Frontend/AfricanNationsLeague_Web/appsettings.json
+++ b/srcUI_Frontend/AfricanNationsLeague_Web/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "DefaultConnection": {
-    "BaseUrl": "https://localhost:7234"
+    "BaseUrl": "https://africantournamentapi-fjerc4fgf4cfcffu.canadacentral-01.azurewebsites.net"
 
   }
 }
